--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,7 @@
     "cSpell.words": [
         "Hmac"
     ],
-    "java.configuration.updateBuildConfiguration": "interactive"
+    "java.configuration.updateBuildConfiguration": "interactive",
+    "latex-workshop.latex.outDir": "%DIR%/out",
+    "latex-workshop.latex.build.forceRecipeUsage": false,
 }
