modify template for my

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,6 @@
         "Hmac"
     ],
     "java.configuration.updateBuildConfiguration": "interactive",
-    "latex-workshop.latex.outDir": "%DIR%/out",
     "latex-workshop.latex.build.forceRecipeUsage": false,
+    "cSpell.language": "en,de",
 }
